# codeforge

./: .gitignore  index.html  latest.json  package-lock.json  package.json  vite.config.js
browser-extension/: content.js  sidepanel.js
excel-addin/: manifest.xml
public/: manifest.json  sw.js
src/: App.css  app.jsx  excelAgent.js  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/excel-addin/: taskpane.html  taskpane.js
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
vscode-extension/: README.md  codeforgeai-hub-1.1.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
