[package]
name = "offlineai"
version = "0.1.0"
description = "OfflineAI Desktop"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "macros", "rt-multi-thread", "net"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
calamine = { version = "0.24", default-features = false, features = ["dates"] }
pdf-extract = "0.7"
# Extension Hub — local WebSocket server for VS Code / Cursor integration (desktop only)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
